# jtdx

./: .gitignore  AUTHORS  AudioDevice.cpp  AudioDevice.hpp  BUGS  Bands.cpp  Bands.hpp  CMakeCPackOptions.cmake.in  CMakeLists.txt  COPYING  CandidateKeyFilter.cpp  CandidateKeyFilter.hpp  Configuration.cpp  Configuration.hpp  Configuration.ui  DXLabSuiteCommanderTransceiver.cpp  DXLabSuiteCommanderTransceiver.hpp  Detector.cpp  Detector.hpp  DisplayManual.cpp  DisplayManual.hpp  EmulateSplitTransceiver.cpp  EmulateSplitTransceiver.hpp  ForeignKeyDelegate.cpp  ForeignKeyDelegate.hpp  FrequencyDelegate.cpp  FrequencyDelegate.hpp  FrequencyDeltaDelegate.cpp  FrequencyDeltaDelegate.hpp  FrequencyDeltaLineEdit.cpp  FrequencyDeltaLineEdit.hpp  FrequencyLineEdit.cpp  FrequencyLineEdit.hpp  FrequencyList.cpp  FrequencyList.hpp  GetUserId.cpp  GetUserId.hpp  HRDTransceiver.cpp  HRDTransceiver.hpp  HamlibTransceiver.cpp  (+136 more)
Audio/: BWFFile.cpp  BWFFile.hpp
CMake/: VersionCompute.cmake  cmake_uninstall.cmake.in  getsvn.cmake
CMake/Modules/: FindFFTW3.cmake  FindGitSubversion.cmake  FindHamlib.cmake  FindUsb.cmake  Findhamlib.cmake  GetGitRevisionDescription.cmake  GetPrerequisites.cmake  NSIS.template.in  QtAxMacros.cmake  VersionInfo.h.in  VersionResource.rc.in  generate_version_info.cmake
Darwin/: Info.plist.in  Mac-jtdx-startup.sh  ReadMe.txt  com.jtdx.sysctl.plist  developer read me.txt  postflight.sh.in  sysctl.conf
Palettes/: Banana.pal  Blue1.pal  Blue2.pal  Blue3.pal  Brown.pal  Cyan1.pal  Cyan2.pal  Cyan3.pal  Default.pal  Default16.pal  Digipan.pal  Fldigi.pal  Gmfsk.pal  Gray1.pal  Gray2.pal  Green1.pal  Green2.pal  Jungle.pal  Linrad.pal  Negative.pal  Orange.pal  Pink.pal  Rainbow.pal  Scope.pal  Sunburst.pal  VK4BDJ.pal  YL2KF.pal  Yellow1.pal  Yellow2.pal  ZL1FZ.pal
SampleDownloader/: Directory.cpp  Directory.hpp  DirectoryDelegate.cpp  DirectoryDelegate.hpp  DirectoryNode.hpp  FileNode.cpp  FileNode.hpp  README  RemoteFile.cpp  RemoteFile.hpp
artwork/: README  make_graphics.sh
boost/: README.md
contrib/CallDB/: ALLCALL7.TXT  CALL3.TXT
contrib/Ephemeris/: JPLEPH
debian/: CMakeLists.txt  changelog.Debian.in  copyright.in
doc/: CMakeLists.txt  README
doc/common/: communication.adoc  license.adoc  links.adoc
doc/user_guide/en/: acknowledgements.adoc  compiling.adoc  config-details.adoc  controls-functions-center.adoc  controls-functions-left.adoc  controls-functions-main-window.adoc  controls-functions-menus.adoc  controls-functions-messages.adoc  controls-functions-status-bar.adoc  controls-functions-wide-graph.adoc  cooperating-programs.adoc  docinfo.html  faq.adoc  font-sizes.adoc  implementation.adoc  install-from-source.adoc  install-linux.adoc  install-mac.adoc  install-windows.adoc  introduction.adoc  logging.adoc  make-qso.adoc  new_features.adoc  platform-dependencies.adoc  protocols.adoc  settings-audio.adoc  settings-colors.adoc  settings-frequencies.adoc  settings-general.adoc  settings-radio.adoc  settings-reporting.adoc  settings-txmacros.adoc  support.adoc  system-requirements.adoc  transceiver-setup.adoc  tutorial-example1.adoc  tutorial-example2.adoc  tutorial-main-window.adoc  tutorial-wide-graph-settings.adoc  utilities.adoc  (+3 more)
icons/: README
lib/: CQnnnCAT.txt  Fast_Modes.txt  Makefile  Makefile.MinGW  Makefile.MinGW.qt4  Makefile.jt65  Makefile.jt65_Win  Makefile.jt65_osx  Makefile.jtsdk  Makefile.linux  afc10.f90  afc65b.f90  afc9.f90  agcc.f90  agccft8.f90  all_fft.out  avg4.f90  azdist.f90  baddata.f90  baseline.f90  bpdecode144.f90  bpdecode174.f90  call_q.f90  call_q1.f90  callsign_q.f90  ccf2.f90  ccf65.f90  char.h  chkcall.f90  chkcrc12a.f90  chkfalse.f90  chkfalse8.f90  chkfft.f90  chkfft.txt  chkfft2.f90  chkfft3.f90  chkflscall.f90  chkftrsd.f90  chkgrid.f90  chkhist.f90  (+284 more)
lib/ft4/: agccft4.f90  ft4_baseline.f90  ft4_downsample.f90  ft4_params.f90  ft4sim.f90  gen_ft4wave.f90  genft4.f90  get_ft4_bitmetrics.f90  getcandidates4.f90  ldpc_174_91_c_generator.f90  osd4_174_91.f90  partintft4.f90  subtractft4.f90  sync4d.f90
lib/ft8v2/: bpdecode174_91.f90  chkcrc14a.f90  encode174_91.f90  ldpc_174_91_c_reordered_parity.f90  my_hash.f90  osd174_91.f90  packjt77.f90  packjt77sd.f90  subtractft8.f90
lib/ftrsd/: Makefile  Makefile.sfrsd  Makefile.sfrsd3  decode_rs.c  encode_rs.c  extract2.f90  ftrsd2.c  init_rs.c  int.h  rs2.h  rsdtest.f90  sfrsd.c  sfrsd2.h  sfrsd3.c
lib/ftrsd/ftrsd_paper/: Makefile  binomial.c  binomial_subs.c  bodide.f90  bodide.lab  fig_bodide.gnuplot  fig_ntrials_vs_nhard.gnuplot  fig_psuccess.gnuplot  fig_subtracted.tiff  fig_waterfall.tiff  fig_wer.gnuplot  fig_wer2.gnuplot  fig_wer3.gnuplot  ftrsd.lyx  mfsk.f90  prob.f90  psuccess.lab  stats_0.0  stats_0.2  stats_1.0  wer2.lab
lib/ldpc/: verify.c
lib/ldpc/jtmode_codes/: 144-72-evenboth-3.results.rtf  160-80-sf4.results  compare.lab  fig_compare.gnuplot  fig_success.gnuplot  ldpc-144-72  (+11 more)
lib/sfrsd/: Makefile  Makefile.win32  decode_rs.c  init_rs.c  int.h  rs.h  rstest.c  sfrsd.c
lib/wsprd/: Makefile  Makefile.MinGW  Makefile.win32  README  WSPRcode.f90  fano.c  genmet.f90  jelinek.c  jelinek.h  mettab.c  nhash.c  nhash.h  osdwspr.f90  t2.f90  tab.c  test_wspr.f90  unpk.c.obsolete  wsprd.c  wsprd_exp.c  wsprd_stats.txt  wsprd_utils.c  wsprd_utils.h  wsprsim.c  wsprsim_utils.c  wsprsim_utils.h
logbook/: adif.cpp  adif.h  countriesworked.cpp  countriesworked.h  countrydat.cpp  countrydat.h  logbook.cpp  logbook.h
manpages/: CMakeLists.txt
manpages/man1/: jt65code.1.txt  jtdx.1.txt  message_aggregator.1.txt  rigctl-jtdx.1.txt  rigctl-wsjtx.1.txt  rigctlcom-jtdx.1.txt  rigctld-jtdx.1.txt  rigctld-wsjtx.1.txt  udp_daemon.1.txt  wsjtx.1.txt  wsprd.1.txt
qmake_only/: svnversion.h
qss/: default.qss
samples/: CMakeLists.txt  README  make_contents.cmake
translations/: jtdx_ca_ES.ts  jtdx_da_DK.ts  jtdx_en_US.ts  jtdx_es_ES.ts  jtdx_et_EE.ts  jtdx_fr_FR.ts  jtdx_hr_HR.ts  jtdx_hu_HU.ts  jtdx_it_IT.ts  jtdx_ja_JP.ts  jtdx_lv_LV.ts  jtdx_nl_NL.ts  jtdx_pl_PL.ts  jtdx_pt_BR.ts  jtdx_pt_PT.ts  jtdx_ru_RU.ts  jtdx_sv_SE.ts  jtdx_zh_CN.ts  jtdx_zh_HK.ts
